# Travel-Price

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  PLAN-FEATURE-4.md  PLAN-FEATURE-5.md  README.md  docker-compose.override.yml  docker-compose.yml
.claude/: env-setup.sh  (+1 more)
backend/: .dockerignore  .gitignore  Dockerfile  Dockerfile.worker  alembic.ini  celerybeat-schedule  entrypoint.sh  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  database.py  limiter.py  security.py
backend/app/models/: __init__.py  alert.py  price_snapshot.py  price_watch.py  trip.py  user.py
backend/app/notifications/: __init__.py  base.py  email.py
backend/app/schemas/: alert.py  auth.py  common.py  price_snapshot.py  price_watch.py  trip.py
backend/app/scrapers/: __init__.py  base.py  playwright_base.py  registry.py  types.py
backend/app/services/: alert_service.py  auth_service.py  price_watch_service.py  scheduled_scrape_service.py  scraper_service.py  trip_service.py
backend/migrations/: env.py
backend/tests/: conftest.py  factories.py  test_alert_routes.py  test_alert_service.py  test_auth_routes.py  test_auth_service.py  test_celery_config.py  test_dynamic_scrape_intervals.py  test_flight_scraper.py  test_graceful_playwright_import.py  test_health.py  test_health_route.py  test_notification.py  test_price_watch_routes.py  test_price_watch_service.py  test_prices_routes.py  test_scheduled_scrape_service.py  test_scraper_base.py  test_scraper_service.py  test_trip_routes.py  test_trip_service.py  test_watch_routes.py  test_worker_tasks.py
(+128 files in other folders)
